--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,7 +50,9 @@
             </li>{% endif %}
         </ul>
             <div>
-                <a href="{{ site.url }}/about/">{{ site.owner.name }}</a> &copy; {{ site.time | date: '%Y' }} &bull; All rights reserved.
+                <a href="{{ site.url }}/about/">{{ site.owner.name }}</a> &copy; {{ site.time | date: '%Y' }} &bull; Content license <a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode" target="_blank">CC BY-SA</a><br />
+                Based on <a href="https://github.com/hmfaysal/hmfaysal-omega-theme" target="_blank">HMFAYSAL OMEGA THEME by Hossain Mohd Faysal</a>.
+
             </div>
             <ul class="menu-items">
             {% for link in site.links %}
