[BUGFIX] Refer to externals via HTTPS

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,7 +49,7 @@
                 </a>
             </li>{% endif %}
             {% if site.owner.slideshare %}<li>
-                <a href="http://www.slideshare.net/{{ site.owner.slideshare }}" data-toggle="tooltip" title="{{ site.owner.name}} on SlideShare" target="_blank">
+                <a href="https://www.slideshare.net/{{ site.owner.slideshare }}" data-toggle="tooltip" title="{{ site.owner.name}} on SlideShare" target="_blank">
                     <i class="icon-slideshare"></i>
                 </a>
             </li>{% endif %}
