--- a/_includes/head.html
+++ b/_includes/head.html
@@ -91,8 +91,11 @@
 <!-- Piwik -->
 <script type="text/javascript">
     var _paq = _paq || [];
+    // accurately measure the time spent on the last pageview of a visit
+    _paq.push(['enableHeartBeatTimer', 5]);
     // tracker methods like "setCustomDimension" should be called before "trackPageView"
     _paq.push(['trackPageView']);
+    _paq.push(['trackVisibleContentImpressions']);
     _paq.push(['enableLinkTracking']);
     (function() {
         var u="//steffengebert.innocraft.cloud/";
