some content tracking

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     <div class="inner">
         <div class="container">
 
-            <ul class="social-icons">
+            <ul class="social-icons" data-track-content data-content-name="Footer Icons">
             {% if site.owner.twitter %}<li>
                 <a href="https://twitter.com/{{ site.owner.twitter }}" data-toggle="tooltip" title="{{ site.owner.name}} on Twitter" target="_blank">
                     <i class="icon-twitter"></i>
